@@ -4,3 +4,5 @@ Makefile
 *.mod.c
 *.ko
 *.s
+.tmp_versions
+.*.d
