@@ -1,3 +1,13 @@
+2004-07-02  Miklos Szeredi <mszeredi@inf.bme.hu>
+
+	* Fix kernel hang on mkfifo under 2.4 kernels (spotted and patch
+	by Mattias Wadman)
+
+	* Fix file offset wrap around at 4G when doing large reads
+
+	* Change passing fuse include dir to 2.6 kernel make system more
+	robust (hopefully fixes problems seen on SuSE 9.1)
+
 2004-06-22  Miklos Szeredi <mszeredi@inf.bme.hu>
 
 	* Released 1.2
